overflow on firefox and safari bug fix

--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -72,7 +72,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: auto;
 }
 
 .popup {
